--- a/requirements.txt
+++ b/requirements.txt
@@ -107,6 +107,7 @@ six==1.17.0
 sniffio==1.3.1
 soupsieve==2.8
 stack-data==0.6.3
+streamlit==1.39.0
 terminado==0.18.1
 tinycss2==1.4.0
 tornado==6.5.2
