--- a/.gitignore
+++ b/.gitignore
@@ -67,8 +67,8 @@ db.sqlite3-journal
 instance/
 .webassets-cache
 
-# Scrapy stuff:
-.scrapy
+# streamlit stuff:
+.streamlit/
 
 # Sphinx documentation
 docs/_build/
