--- a/requirements.txt
+++ b/requirements.txt
@@ -7,6 +7,7 @@ arrow==1.4.0
 asttokens==3.0.0
 async-lru==2.0.5
 attrs==25.4.0
+Authlib==1.3.2
 babel==2.17.0
 beautifulsoup4==4.14.2
 bleach==6.3.0
@@ -107,7 +108,8 @@ six==1.17.0
 sniffio==1.3.1
 soupsieve==2.8
 stack-data==0.6.3
-streamlit==1.39.0
+streamlit==1.52.0
+streamlit-oauth==0.1.14
 terminado==0.18.1
 tinycss2==1.4.0
 tornado==6.5.2
